# speedreader

./: .gitignore  LICENSE  README.md
chat_server/: main.py  pyproject.toml
speedreader/: agent.py  latest_outline.md  llm.py  main.py  models.py  pyproject.toml  utils.py
speedreader-frontend/: package-lock.json  package.json
speedreader-frontend/app/: globals.css  layout.tsx  page.tsx
speedreader-frontend/app/api/chat/: route.ts
speedreader-frontend/components/: Body.tsx  Chat.tsx  ChatHistory.tsx  ChatInput.tsx  Notes.tsx  Resource.tsx  ResourceDownloader.tsx  ResourceSelector.tsx  TopBar.tsx
speedreader-frontend/lib/: utils.ts
speedreader-frontend/types/: main.ts
speedreader/prompts/: generate_outline.md  retrieve_agent.md  shorten_outline.md  textual_alignment.md
